# CUDA

./: CMakeLists.txt  README.md  main.cu
files/: sgemm.md
include/: Matrix.cuh  activate.cuh  dot_product.cuh  elementwise.cuh  gemm.cuh  histogram.cuh  norm.cuh  reduce.cuh  sgemv.cuh  softmax.cuh  utils.cuh
reduce/: block_all_reduce.cu  block_all_reduce.py
src/: elementwise.cu  gemm.cu  reduce.cu
